Added Link to Deta

--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -233,7 +233,7 @@
         margin-top:0px;
         margin-bottom:0px;
         padding-top:0px;">
-            <h5 style="margin-top: 0px; margin-bottom:0px;">Made by <span ><a style="padding:3px;" class="mainLinks" target="_blank" href="https://twitter.com/fillerInk">fillerInk</a></span></h5>
+            <h5 style="margin-top: 0px; margin-bottom:0px;">Made by <span ><a style="padding:3px;" class="mainLinks" target="_blank" href="https://twitter.com/fillerInk">fillerInk</a></span> with <span><a style="padding:3px;" class="mainLinks" target="_blank" href="https://deta.sh">Deta</a></span></h5>
         </div>
 
     </div>
